@@ -168,6 +168,7 @@ parameters:
 - added parameters <constraints/indicator/forcerestart> and <constraints/indicator/restartfrac> to control forced restart in cons_indicator
 - new parameter <limit/maxorigsol> which defines the size of the solution candidate store (default value is 10)
 - all parameters in cons_indicator and cons_sos1 have been converted to lower case!
+- new parameters "conflict/bounddisjunction/continuous" to ignore conflict clauses which contain continuous variables 
 
 features:
 - flatzinc reader is now capable to read cumulative constraints
